--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-paper": "^4.12.2",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "^3.3.0",
     "realm": "^10.19.1",
     "uuid": "^8.3.2",
     "victory-native": "^36.5.0"
